fixed cc-form-error z-index issue with IE7

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -969,6 +969,7 @@ td.eval {
 	vertical-align: middle;
 	white-space: nowrap;
 	font-size: 95%;
+	z-index: 2;
 }
 .cc-form-error .text .inner {
 	position: relative;
